# src/controllers/task-controller.ts
@@ -1,7 +1,9 @@
 import { Request, Response } from 'express';
+import { GetTasksRequestQuery } from '../@types/api/get-tasks-request-query';
 import { HttpErrorCode } from '../@types/http-error-code';
 import { WebMethod } from '../@types/web-method';
 import { BaseController } from '../base/base-controller';
+import { TaskStatus } from '../db/@types/task-status';
 import { ApiBadRequestErrors } from '../errors/generic/api-errors';
 import { AppSingletonErrors } from '../errors/generic/app-errors';
 import { TaskService } from '../services/task-service';
@@ -19,6 +21,13 @@ export class TaskController extends BaseController {
   private constructor(service: SwordHealthBackendChallengeService) {
     super(service);
     this.service = service;
+
+    this.webServer.on(
+      WebMethod.GET,
+      '/task',
+      (req, res, next) => JwtAuthenticationMiddleware.getInstance().getMiddleware(req, res, next),
+      this.errorFactory((req, res) => TaskController.getInstance().get(req, res)),
+    );
 
     this.webServer.on(
       WebMethod.POST,
@@ -44,6 +53,53 @@ export class TaskController extends BaseController {
     }
     this.instace = new TaskController(service);
     return this.instace;
+  }
+
+  private async get(request: Request, response: Response): Promise<Response> {
+    const { requestId, jwtPayload } = response.locals;
+    TypeUtils.assertUUID(requestId);
+
+    TypeUtils.assertJwtPayload(jwtPayload);
+    const { owner: userId } = jwtPayload;
+
+    const parsedQuery: GetTasksRequestQuery = {};
+    try {
+      const { limit, skip, status, technicianId } = request.query;
+      if (limit) {
+        TypeUtils.assertsStringNonNegativeInteger(limit);
+        parsedQuery.limit = limit;
+      }
+      if (skip) {
+        TypeUtils.assertsStringNonNegativeInteger(skip);
+        parsedQuery.skip = skip;
+      }
+      if (TypeUtils.isTaskStatus(status)) {
+        parsedQuery.status = status;
+      }
+      if (technicianId) {
+        TypeUtils.assertUUID(technicianId);
+        parsedQuery.technicianId = technicianId;
+      }
+    } catch (_e) {
+      throw ErrorUtils.createApiError(requestId, HttpErrorCode.HTTP_400_BadRequest, ApiBadRequestErrors.InvalidGetTasksRequestQuery);
+    }
+    if (parsedQuery.status === TaskStatus.ARCHIVED) {
+      throw ErrorUtils.createApiError(requestId, HttpErrorCode.HTTP_400_BadRequest, ApiBadRequestErrors.InvalidGetTasksRequestQuery);
+    }
+
+    this.logger.info({ requestId, userId, parsedQuery }, 'TaskController: get');
+
+    const { result, total } = await TaskService.getInstance(this.service).get(
+      requestId,
+      userId,
+      parsedQuery.limit ? Number.parseInt(parsedQuery.limit, 10) : 10,
+      parsedQuery.skip ? Number.parseInt(parsedQuery.skip, 10) : 0,
+      parsedQuery.status,
+      parsedQuery.technicianId,
+    );
+    this.logger.debug({ requestId, result, total }, 'get: result, total');
+
+    return response.status(200).send(ResponseBuilder.toGetTasksResponse(result, total));
   }
 
   private async create(request: Request, response: Response): Promise<Response> {
